three.js reactive sizing issues

--- a/src/style/table.scss
+++ b/src/style/table.scss
@@ -45,8 +45,12 @@ tfoot {
 tfoot th {
   font-weight: normal;
 }
-div {
-  border: .1px solid purple;
-}
+
 #app{
 }
+canvas{
+	width:50vw;
+	height: 20vh;
+	user-select: none;
+}
+
