--- a/src/style/table.scss
+++ b/src/style/table.scss
@@ -2,6 +2,9 @@
     font-family: "ＭＳ Ｐゴシック";
     src: local(../MSGOTHIC.TTF) format("truetype")
 }
+div{
+  border: 1px solid yellow;
+}
 * {
     font-family: "ＭＳ Ｐゴシック";
     font-weight: 1!important;
@@ -13,8 +16,6 @@ table {
 }
 .card{
 
-	width:auto;
-	max-width:800px;
   border-top: 1px solid lightgray;
   border-left: 1px solid lightgray;
 }
@@ -28,13 +29,13 @@ table {
   border: 3px solid lightgray;
 }
 .p-paginator {
-	display: block!important;
+	display: block;
 }
 .p-column-filter-row {
-	display: block!important;
+	display: block;
 }
 .p-column-filter-menu-button, .p-column-filter-clear-button {
-	display: block!important;
+	display: block;
 	padding: 0px;
 }
 .p-datatable-header {
@@ -59,11 +60,23 @@ tfoot th {
   font-weight: normal;
 }
 
-#app{
-}
 canvas{
 	max-height: 100px;
 	user-select: none;
 }
-td:nth-child(0) { width:10px; }
+
+.lg{
+	display:auto;
+	max-width:800px;
+}
+.sm{
+	display:inline-block;
+	max-width:800px;
+	width: 100vw;
+}
+
+.smSub{
+	float: left;
+	max-width:49.5%;
+}
 
