--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,1 +1,31 @@
+@font-face {
+    font-family: "ＭＳ Ｐゴシック";
+    src: local(../MSGOTHIC.TTF) format("truetype")
+}
+div{
+}
+* {
+    font-family: "ＭＳ Ｐゴシック";
+    font-weight: 1!important;
+	text-decoration:none;
+}
+.lg{
+	display:auto;
+	max-width:800px;
+}
+.sm{
+	display:inline-block;
+	max-width:800px;
+	width: 100vw;
 
+}
+
+.smSub{
+	float: left;
+	max-width:50%;
+}
+#app{
+}
+body{
+	margin:0px;
+}
