furthur table complications and features

--- a/src/style/table.scss
+++ b/src/style/table.scss
@@ -60,3 +60,8 @@ border-collapse: collapse;
 
   border-top: 1px solid lightgray;
 }
+.p-multiselect-panel{
+
+  border: 3px solid lightgray;
+      background: white;
+}
