--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,15 @@
-@font-face {
-    font-family: "ＭＳ Ｐゴシック";
-    src: local(../MSGOTHIC.TTF) format("truetype")
+@mixin font($font-family, $font-file) {
+  @font-face {
+    font-family: $font-family;
+    src: local($font-file+'.ttf');
+  }
+}
+@include font('ＭＳ Ｐゴシック', 'MSGOTHIC');
+
+#app{
+}
+body{
+	margin:0px;
 }
 div{
 }
@@ -24,8 +33,4 @@ div{
 	float: left;
 	max-width:50%;
 }
-#app{
-}
-body{
-	margin:0px;
-}
+
