--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,28 @@
+@import "./ThemeModes";
+.theme-dark {
+  --background-primary: #303a52;
+  --background-secondary: #353f55;
+  --background-ternary: #404653;
+
+  --text-primary: #fff;
+  --text-secondary: #e2e8f0;
+
+  --border-primary: #a0aec0;
+  --border-secondary: #a0aec0;
+}
+
+.theme-light {
+  --background-primary: #fff;
+  --background-secondary: #f7fafc;
+  --background-ternary: #cbd5e0;
+
+  --text-primary: #000;
+  --text-secondary: #718096;
+
+  --border-primary: #000;
+  --border-secondary: #a0aec0;
+}
+
 @mixin font($font-family, $font-file) {
   @font-face {
     font-family: $font-family;
@@ -7,6 +32,7 @@
 @include font('ＭＳ Ｐゴシック', 'MSGOTHIC');
 
 #app{
+  background: var(--background-primary);
 }
 body{
   margin:0px;
