--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -1,1 +1,18 @@
- $tableBorderColor: lightgray;
+.theme-dark {
+  --background-primary: #2d2d2d;
+  --link: rgba(194, 194, 73, 0.823);
+  --link-visited: #aae574;
+  --text-primary: #dfdfdfd3;
+  --color-scheme: dark;
+  --border-primary: #a0aec0;
+}
+
+.theme-light {
+  --background-primary: #ffffff;
+  --link: rgba(30, 30, 249, .823);
+  --link-visited: #b110b1;
+  --text-primary: #000;
+  --text-secondary: #718096;
+  --color-scheme: light;
+  --border-primary: #D3D3D3;
+}
