tables and ui now dynamic screen sized

--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -4,15 +4,15 @@
   --link-visited: #aae574;
   --text-primary: #dfdfdfd3;
   --color-scheme: dark;
-  --border-primary: #a0aec0;
+  --border-primary: #848493;
 }
 
 .theme-light {
-  --background-primary: #ffffff;
+  --background-primary: #ccc;
   --link: rgba(30, 30, 249, .823);
   --link-visited: #b110b1;
   --text-primary: #000;
   --text-secondary: #718096;
   --color-scheme: light;
-  --border-primary: #D3D3D3;
+  --border-primary: #737373;
 }
