--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -35,7 +35,6 @@ a:visited {
   color: var(--text-primary);
 }
 .lg{
-  display:auto;
 }
 .sm{
   display:auto;
@@ -74,9 +73,7 @@ canvas{
 
 .data {
   padding-bottom:20px;
-  width:100%;
   float:left; /* add this */
-  max-width:100%;
 }
 .xl\:col-4 {
     width:33%;
@@ -84,7 +81,15 @@ canvas{
   .content {
 
   max-width:100vw;
-   width:100%;
     float: left; /* add this */
   }
+}
+.p-splitter-panel{
+  border-right:1px solid pink;
+  border-top:1px solid pink;
+  padding:0px;
+  margin:0px;
+}
+.p-splitter{
+  margin:0px!important;
 }
