--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -9,13 +9,15 @@ input, textarea {
     width:100px;
   }
 
+.xl\:align-items-end {
+  flex-direction: flex-end!important;
+}
 .contentView{
   border-top:1px solid var(--border-primary);
 }
 .p-4 {
     padding: 0rem !important;
-
-overflow:hidden;
+  overflow:hidden;
 }
 .py-5 {
     padding-top: 0rem !important;
@@ -41,11 +43,13 @@ overflow:hidden;
   align-content: flex-start;
 }
 .xl\:w-10rem {
-    width: 300px !important;
+    width: 100% !important;
+    max-width: 500px;
 }
 .p-dataview-list{
   .p-grid{
-    max-height:calc(100vh - 46px)!important;
+    width:calc(100% - 1px)!important;
+    max-height:calc(100vh - 39px)!important;
     overflow:scroll!important;
   .p-dataview-content{
   }
@@ -58,6 +62,7 @@ overflow:hidden;
 .p-dataview-grid{
   .p-grid{
     height:calc(100vh - 16px)!important;
+    width:calc(100% - 1px)!important;
     max-height:calc(100vh - 39px)!important;
     overflow:scroll!important;
   .p-dataview-content{
@@ -71,7 +76,7 @@ overflow:hidden;
   margin:0px!important;
 }
 .test-6{
-    width:200px;
+    width:100%;
 		border-top: $tableBorder!important;
 		border-left: $tableBorder!important;
 }
