--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -1,6 +1,6 @@
 .theme-dark {
   --background-primary: #2d2d2d;
-  --link: rgba(194, 194, 73, 0.823);
+  --link: rgba(194, 194, 73, 0.973);
   --link-visited: #aae574;
   --text-primary: #dfdfdfd3;
   --color-scheme: dark;
@@ -9,8 +9,8 @@
 
 .theme-light {
   --background-primary: #ccc;
-  --link: rgba(30, 30, 249, .823);
-  --link-visited: #b110b1;
+  --link: green;
+  --link-visited: brown;
   --text-primary: #000;
   --text-secondary: #718096;
   --color-scheme: light;
