--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -49,7 +49,7 @@ input, textarea {
 .p-dataview-list{
   .p-grid{
     width:calc(100% - 1px)!important;
-    max-height:calc(100vh - 39px)!important;
+    max-height:calc(100dvh - 39px)!important;
     overflow:scroll!important;
   .p-dataview-content{
   }
@@ -61,9 +61,9 @@ input, textarea {
 }
 .p-dataview-grid{
   .p-grid{
-    height:calc(100vh - 16px)!important;
+    height:calc(100dvh - 16px)!important;
     width:calc(100% - 1px)!important;
-    max-height:calc(100vh - 39px)!important;
+    max-height:calc(99dvh - 42px)!important;
     overflow:scroll!important;
   .p-dataview-content{
   }
