--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -1,3 +1,4 @@
+div{
 .border-1 {
 		border: $tableBorder!important;
 }
@@ -47,6 +48,7 @@ input, textarea {
     max-width: 500px;
 }
 .p-dataview-list{
+
   .p-grid{
     width:calc(100% - 1px)!important;
     max-height:calc(100dvh - 39px)!important;
@@ -82,4 +84,15 @@ input, textarea {
 }
 .flex{
  row-gap:0px!important;
+}
+.file_path{
+  overflow:ellipsis;
+text-overflow: ellipsis;
+
+white-space: nowrap;}
+.created_at{
+  overflow:ellipsis;
+text-overflow: ellipsis;
+
+white-space: nowrap;}
 }
