--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,10 +12,10 @@ $compWidth: 590px;
   min-height:100dvh;
   min-width: 100dvw;
   position: fixed;
-  margin:0;
+  margin:0!important;
   padding:0;
-overscroll-behavior: none!important;
-
+  overscroll-behavior: none!important;
+  text-align:left!important;
 }
 .index{
   max-height:100dvh;
@@ -23,6 +23,9 @@ overscroll-behavior: none!important;
   position: fixed;
   margin:0;
   padding:0;
+}
+nav{
+  max-width:400px;
 }
 #app{
   background-color: var(--background-primary);
@@ -77,4 +80,8 @@ canvas{
   border: 1px solid var(--border-primary);
   float: left; /* add this */
 }
+.logout-button{
+  align-items:right;
+}
+
 
