cleanup post devise implementation, restored dark-mode functionality, change threeMain pane ratio, cleaned up login interface, restored loading gif on img load

--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -7,7 +7,10 @@
 @include font('ＭＳ Ｐゴシック', 'MSGOTHIC');
 @import "./ThemeModes";
 $compWidth: 590px;
-
+.p-button-icon-only{
+  background:none;
+  border: $tableBorder;
+}
 #app{
   min-height:100dvh;
   min-width: 100dvw;
