--- a/src/style/SplitterPanel.scss
+++ b/src/style/SplitterPanel.scss
@@ -3,3 +3,20 @@
 
   background-color: var(--background-primary)!important;
 }
+.splitpanes.default-theme .splitpanes__splitter:before{
+    content: "";
+    height:30px!important;
+    width:30px!important;
+    border:1px solid lightyellow;
+
+    background-color: rgba(0,0,0,0)!important;
+}
+.splitpanes.default-theme .splitpanes__splitter {
+    background-color: var(--background-primary)!important;
+    box-sizing: border-box;
+    position: relative;
+    flex-shrink: 0;
+
+    border:1px solid lightyellow;
+}
+
