--- a/src/style/SplitterPanel.scss
+++ b/src/style/SplitterPanel.scss
@@ -1,8 +1,11 @@
 @import "./ThemeModes";
-.splitpanes.default-theme .splitpanes__pane{
 
+// content pane
+.splitpanes.default-theme .splitpanes__pane{
   background-color: var(--background-primary)!important;
 }
+
+// middle segment
 .splitpanes.default-theme .splitpanes__splitter:before{
     content: "";
     height:30px!important;
@@ -11,12 +14,13 @@
 
     background-color: rgba(0,0,0,0)!important;
 }
+
+// slider section
 .splitpanes.default-theme .splitpanes__splitter {
     background-color: var(--background-primary)!important;
     box-sizing: border-box;
     position: relative;
     flex-shrink: 0;
-
     border:1px solid lightyellow;
 }
 
