--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -1,5 +1,5 @@
 .theme-dark {
-  --background-primary: #2d2d2d;
+  --background-primary: #000;
   --link: rgba(194, 194, 73, 0.973);
   --link-visited: #aae574;
   --text-primary: #dfdfdfd3;
