--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -97,3 +97,30 @@ input, textarea {
   text-overflow: ellipsis;
   white-space: nowrap;}
 }
+
+.contentView{
+  height:100%;
+  width:100%;
+  border:1px solid white;
+}
+.container{
+  max-height:100%!important;
+  max-width:100%!important;
+  .overlay {
+    height:30dvh!important;
+    max-width:100%!important;
+    .vue-load-image{
+      min-height:90%!important;
+      max-height:100%!important;
+      height:100%;
+    .overlayImg{
+      width:100%;
+      height:100%;
+      max-height:80%!important;
+      max-width:100%!important;
+      object-fit: contain!important;
+      border:1px solid white;
+    }
+  }}
+}
+
